--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,68 +1,32 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: Grifter;
+  src: url('../fonts/grifterbold.otf');
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+:root{
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+  /*bg colors*/
+  --bg-clr: #FCFCFC;
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+  /*font colors*/
+  --fnt-clr-primary: #202124;
+  --fnt-clr-secondary: #575858;
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+  --fnt-clr-gray: #999CA4;
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  /*colors*/
+  --clr-yellow-primary: #E7A90A;
+  --clr-gray-secondary: #AFB5BF;
+  
+  /*other specifications*/
+  font-family: "Inter", sans-serif;
+  --border-radius: 8px;
 }
+/* [data-theme="dark"]{
+ 
+  --bg-clr: #202124;
+  
+  --fnt-clr-primary: #FFFFFF;
+  --fnt-clr-secondary: #575858;
+
+} */
