--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,11 +1,19 @@
+
 a{
     text-decoration: none;
-
 }
-
+.browseButton{
+    color: var(--fnt-clr-secondary);
+    transition: all 0.5s;
+}
+.browseButton:hover{
+    color: var(--clr-yellow-primary);
+    transition: all 0.5s;
+}
 .nav{
     display: flex;
     justify-content: space-between;
+    margin: 2rem;
 }
 
 .nav div{
@@ -27,11 +35,20 @@ a{
 
 .loginButton{
     cursor: pointer;
+    background-color: transparent;
     color: var(--fnt-clr-secondary);
-
     font-size: 1rem;
     font-weight: 500;
     border: 1.5px var(--fnt-clr-secondary) solid;
     border-radius: var(--border-radius);
     padding: 0.5rem 1rem;
+    transition: all 0.5s;
+
+}
+
+.loginButton:hover{
+    background-color: var(--clr-yellow-primary);
+    border: none;
+    color: #FFFF;
+    transition: all 0.5s;
 }
