--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -22,7 +22,7 @@ span{
 }
 
 .footer-information{
-    background-color: #e9e9e9;
+    background-color: var(--footer-bg-clr);
 
     display: flex;
     justify-content: center;
