--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,7 @@
 *{
   margin: 0;
   padding: 0;
-  
+  transition: all 0.3s ease-in-out;
    /* Disable the highlight */
    -webkit-user-select: none;
    -khtml-user-select: none;
@@ -25,6 +25,7 @@
   --fnt-clr-secondary: #575858;
   --fnt-clr-gray: #999CA4;
 
+
   /* Other colors */
   --clr-yellow-primary: #E7A90A;
   --clr-gray-secondary: #AFB5BF;
@@ -35,10 +36,31 @@
 
   /* Apply transition globally */
   transition: all 0.5s ease, color 0.5s ease;
+
+  /* Footer */
+  --footer-bg-clr: #e9e9e9;
+  
 }
 
 [data-theme="dark"] {
   --bg-clr: #202124;
   --fnt-clr-primary: #FFFFFF;
-  --fnt-clr-secondary: #575858;
+  --fnt-clr-secondary: #f1f1f1;
+  --clr-gray-secondary: #AFB5BF;
+  --footer-bg-clr: #1B1C1E;
+}
+
+/* Transitions */
+body{
+  opacity: 0;
+  animation: fadeIn 1.5s ease-in-out forwards;
+}
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+  
 }
